applying codestyle: applying code style to the current source code
Applying the codestyle into the code so the checkstyle on compile time can be activated without breaking the build