@@ -19,10 +19,10 @@ import org.slf4j.LoggerFactory;
 
 /**
  * Stateless class that is capable of interprete a given format.
+ *
  * @author <a href="mailto:Jander.BOTELHODONASCIMENTO@cea.fr">Jander Botelho do Nascimento</a>
  */
 public class ProcessorFormatMultiply implements ProcessorFormatIface {
-
     private static final Logger LOG = LoggerFactory.getLogger(MqttActivator.class);
 
     @Override
@@ -31,20 +31,18 @@ public class ProcessorFormatMultiply implements ProcessorFormatIface {
     }
 
     @Override
-    public String process(String inData,SelectorIface selector) throws ProcessorFormatException {
+    public String process(String inData, SelectorIface selector) throws ProcessorFormatException {
         try {
-            final String expression=selector.getExpression();
-
+            final String expression = selector.getExpression();
             try {
-                Float inDataValue=new Float(inData);
-                Float value=new Float(expression);
-                return Float.valueOf(inDataValue*value).toString();
-            }catch (NumberFormatException e){
+                Float inDataValue = new Float(inData);
+                Float value = new Float(expression);
+                return Float.valueOf(inDataValue * value).toString();
+            } catch (NumberFormatException e) {
                 return inData.concat(selector.getExpression());
             }
-
         } catch (Exception e) {
-            LOG.error("Failed to apply {} filter. Bypassing filter",getName(),e);
+            LOG.error("Failed to apply {} filter. Bypassing filter", getName(), e);
             return inData;
         }
     }
